<resources>
    <string name="app_name">FakeStore</string>
    <string name="description_image_login">description_image_login</string>
    <string name="description_image_signup" translatable="false">description_image_signup</string>
    <string name="description_arrow_back" translatable="false">description_arrow_back</string>
    <string name="description_shopping_cart" translatable="false">description_shopping_cart</string>
    <string name="description_image_item" translatable="false">description_image_item</string>
    <string name="description_empty_results" translatable="false">description_empty_results</string>
    <string name="description_image_profile" translatable="false">description_image_profile</string>
    <string name="description_icon_close" translatable="false">description_icon_close</string>


    <string name="login_text">Login</string>
    <string name="you_don_t_have_account_signup">You don\'t have account? SignUp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup_text">SignUp</string>
    <string name="user_information_text">User information</string>
    <string name="name_text">Name</string>
    <string name="last_name_text">Last name</string>
    <string name="user_address_text">Address</string>
    <string name="country_text">Country</string>
    <string name="town_text">Town</string>
    <string name="street_text">Street</string>
    <string name="zip_code_text">Zip code</string>
    <string name="user_account_text">Account</string>
    <string name="alias_text">Alias</string>
    <string name="password_confirm">Confirm password</string>
    <string name="user_name">User name</string>
    <string name="city_text">City</string>
    <string name="number_text">Number</string>
    <string name="user_category_electronics">Electronics</string>
    <string name="user_category_jewelery">Jewelery</string>
    <string name="user_category_mens_clothing">Men\'s clothing</string>
    <string name="user_category_womens_clothing">Women\'s clothing</string>
    <string name="account_info">Account Info</string>
</resources>